--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
 fastapi==0.115.0
 uvicorn[standard]==0.30.6
-pydantic==1.10.18
+pydantic==2.9.0
 python-jose[cryptography]==3.3.0
 SQLAlchemy==2.0.36
-
-fastapi==0.115.0
-uvicorn[standard]==0.30.6
-pydantic==2.9.0
+pymysql==1.1.0
+cryptography==41.0.7
+passlib[bcrypt]==1.7.4
+alembic==1.13.1
+pytest==7.4.4
+pytest-asyncio==0.23.3
+# SQLite входит в стандартную библиотеку Python, дополнительная установка не требуется
 
 
 
